--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "pdf": "node scripts/generate-pdf.js"
   },
   "dependencies": {
+    "@fontsource/dm-sans": "^5.2.8",
+    "@fontsource/libre-baskerville": "^5.2.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
